--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,20 +1,45 @@
 @import './config';
 @import './navbar';
+@import './sidebar';
+@import './chat';
 
 .home {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    // gap: 1rem;
     row-gap: 1rem;
 }
 
+.home-web.chat {
+    background: $secondDG-dark-color;
+    place-items: center;
+    padding-top: 120px;
+    text-align: center;
 
+    h1 {
+        font-weight: lighter;
+        margin-bottom: -10px;
+    }
+
+}
 
 .sidebar {
-    grid-column: 1 / span 2;
-    // grid-row: 3;
+    grid-column: 1 / span 5;
+
 }
 
 .chat {
-    grid-column: 3 / span 12;
+
+    grid-column: 6 / span 12;
+}
+
+@media screen and (min-width: 900px) {
+    .sidebar {
+        grid-column: 1 / span 4;
+
+    }
+
+    .chat {
+        grid-column: 5 / span 12;
+    }
+
 }
