--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -13,7 +13,7 @@
        align-items: center;
        justify-content: space-between;
        height: 50px;
-       padding: 0 10px;
+       padding: 10px;
        background-color: $secondDG-dark-color;
 
 
@@ -90,6 +90,7 @@
            grid-template-columns: repeat(12, 1fr);
            column-gap: 1rem;
            justify-content: space-between;
+           width: 100%;
            border-bottom: 1px solid $thirdDG-dark-color;
            padding: 1rem 0;
 
@@ -103,6 +104,7 @@
                color: $primary-text-color;
                font-size: 1rem;
                grid-column: 1/ span 5;
+
            }
 
            .chat-time {
