--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -4,6 +4,7 @@
 
    .sidebar {
        border-right: 1px $thirdDG-light-color solid;
+       //    display: inline-block;
        //    min-width: 280px;
        //    max-width: 380px;
    }
