--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,10 +3,16 @@
 @import './sidebar';
 @import './chat';
 
+a {
+    text-decoration: none;
+}
+
 .home {
-    display: grid;
+    // display: grid;
+    display: flex;
     grid-template-columns: repeat(12, 1fr);
     row-gap: 1rem;
+    width: 100vw;
 }
 
 .home-web.chat {
@@ -67,23 +73,28 @@
 }
 
 .sidebar {
-    grid-column: 1 / span 5;
+    // grid-column: 1 / span 5;
+    flex: 2;
+    min-width: 400px;
 
 }
 
 .chat {
 
-    grid-column: 6 / span 12;
+    // grid-column: 6 / span 12;
+    width: 500px;
+    flex: 5;
+    min-width: 600px;
 }
 
-@media screen and (min-width: 900px) {
-    .sidebar {
-        grid-column: 1 / span 4;
+// @media screen and (min-width: 900px) {
+//     .sidebar {
+//         grid-column: 1 / span 4;
 
-    }
+//     }
 
-    .chat {
-        grid-column: 5 / span 12;
-    }
+//     .chat {
+//         grid-column: 5 / span 12;
+//     }
 
-}
+// }
