--- a/src/sass/_chat.scss
+++ b/src/sass/_chat.scss
@@ -100,6 +100,10 @@
 
     .MuiSvgIcon-root {
         margin: 0px;
+
+        &.close-emoji {
+            color: $primary-green;
+        }
     }
 
     span {
@@ -111,6 +115,7 @@
         background: $fourthDG-light-color;
         border-radius: 10px;
         padding: 2px 10px;
+        width: 100%;
         flex: 4;
     }
 
@@ -119,6 +124,7 @@
         color: $primary-text-color;
         padding: 8px 10px;
         height: 50%;
+        width: 100%;
         // height: 40px;
 
 
